# PingPongSim

./: .gitignore  pingpong.cabal  stack.yaml
src/: Convert.hs  PingPong.hs  Transformation.hs
src/PingPong/: Model.hs  Player.hs  Simulation.hs
src/PingPong/Draw/: Gloss.hs  Rasterific.hs
src/PingPong/Player/: ArgPlayer.hs  ArgPlayer.py  BackupPlayer.hs  DummyPlayer.hs  NativePlayer.hs  SocketPlayer.hs  SocketPlayer.py  SoloboloCopyPlayer.hs  SoloboloCopyPlayer.py  SoloboloPlayer.hs  SoloboloPlayer.py  TestPlayer.hs
src/PingPong/Simulation/: Collision.hs  Realtime.hs  Recording.hs
test/: B1.hs  B2.hs  B3.hs
